Campus location drop down list is added to restaurant form

--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -25,14 +25,22 @@
                             <label for="MenuType">Menu Type</label>
                             <input class="form-control" name="MenuType" placeholder="Enter Menu Type" type="text" required>
                         </div>
-                        <div class="form-group">
-                            <label for="InputMenuID">Select Menu ID</label>
-                            <input class="form-control" name="MenuID" placeholder="Enter menu id" type="text" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="InputMenuID">Select Campus Location</label>
-                            <input class="form-control" name="campusLocation" placeholder="Select campus location" type="text" required>
-                        </div>
+
+
+                        {% if campusLocations %}
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <div class="col-md-6">
+                                        <label for="exampleInputPassword1">Select campus location</label>
+                                        <select class="form-control" id="campusLocation" name="campusLocation" >
+                                            {% for campusLocation in campusLocations %}
+                                                <option value="{{ campusLocation[1] }}">{{ campusLocation[1] }} - {{ campusLocation[0] }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
                         <div class="form-group">
                             <label for="RestaurantPoint">Enter Restaurant Point</label>
                             <input class="form-control" name="RestaurantPoint" placeholder="Enter restaurant point" type="text" required>
