--- a/templates/restaurants_details.html
+++ b/templates/restaurants_details.html
@@ -4,7 +4,7 @@
     <h1>Restaurant Name: {{ restaurant.get_restaurant_name() }} </h1>
 
     <br>
-    <p> Location: {{ restaurant.get_location_id() }}</p>
+    <p> Location: {{ campusInformation[0][1] }} - {{ campusInformation[0][0] }}</p>
     <p> Opening Time: {{ restaurant.get_opening_time() }}</p>
     <p> Closing Time: {{ restaurant.get_closing_time() }}</p>
     <p> Restaurant Point: {{ restaurant.get_restaurant_point() }}</p>
