--- a/templates/restaurants_details.html
+++ b/templates/restaurants_details.html
@@ -111,5 +111,41 @@
 
     {% endif %}
 
+    <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#VoteRestaurant">Vote Restaurant</button>
+
+    <div class="modal fade" id="VoteRestaurant" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Vote Restaurant</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="{{ url_for('site.RestaurantsPage') }}" name="VoteUpdate" role="form">
+                        <input type="hidden" name="form-name" value="VoteUpdate">
+                        <input type="hidden" name="vote-id" value="selection">
+                        <input type="hidden" name="restaurant-id" value="{{ restaurant.get_id() }}">
+                        {% if campusLocations %}
+                                <div class="form-group">
+                                    <div class="form-row">
+                                        <div class="col-md-6">
+                                            <label for="exampleInputPassword1">Select campus location</label>
+                                            <select class="form-control" id="point" name="point" >
+                                                {% for point in pointList %}
+                                                    <option value="{{ point }}">{{ point }}</option>
+                                                {% endfor %}
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        <button type="reset">Reset</button>
+                        <button type="submit" formmethod="POST">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 {% endblock %}
