--- a/templates/sharedbooks_announcement.html
+++ b/templates/sharedbooks_announcement.html
@@ -99,8 +99,8 @@
                              </div>
                     </td>
                     <td>
-						<a href="{{ url_for('site.selected_lost_stuff', bookId=item[10]) }}">
-                            <button type="button" class="btn btn-info btn-md">Go to Details</button>
+						<a href="{{ url_for('site.selected_sharingBooks', id=item[10]) }}">
+                            <button type="button" class="btn btn-info btn-md">Update/Delete</button>
                         </a>
 					</td>
 
