--- a/templates/sharedlessonnotes_announcement.html
+++ b/templates/sharedlessonnotes_announcement.html
@@ -80,6 +80,11 @@
                                  </div>
                              </div>
                     </td>
+                    <td>
+						<a href="{{ url_for('site.selected_sharingLessonNotes', id=item[9]) }}">
+                            <button type="button" class="btn btn-info btn-md">Update/Delete</button>
+                        </a>
+					</td>
 
                 </tr>
             {% endfor %}
