--- a/templates/lost_stuff_details.html
+++ b/templates/lost_stuff_details.html
@@ -36,51 +36,52 @@
 	<br>
     
     {%  if user_id == lost_user_id or current_user.is_admin %}
-    <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#LostSomething">Update Record</button>
+    <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#LostSomething">
+        Update Record
+    </button>
 
     <div class="modal fade" id="LostSomething" role="dialog">
         <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Update Record</h4>
-                      </div>
-                      <div class="modal-body">
-                        <form method="POST" action="{{ url_for('site.LostStuff') }}" name="LostSomethingUpdate" role="form">
-                          <input type="hidden" name="form-name" value="LostSomethingUpdate">
-                          <input type="hidden" name="lost-id" value="{{ lost.get_id() }}">
-                          <div class="form-group">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Update Record</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="{{ url_for('site.LostStuff') }}" name="LostSomethingUpdate" role="form">
+                        <input type="hidden" name="form-name" value="LostSomethingUpdate">
+                        <input type="hidden" name="lost-id" value="{{ lost.get_id() }}">
+                        <div class="form-group">
                             <label for="InputDescription">Description</label>
                             <input class="form-control" name="LostSomethingDescription" placeholder="Enter Description" type="text">
-                          </div>
-                          <div class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="InputPossibleLocation">Possible Location</label>
                             <input class="form-control" name="LostSomethingPossibleLocation" placeholder="Enter possible location" type="text">
-                          </div>
-                          <div class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="date">Possible date of losing</label>
                             <input class="form-control" name="LostSomethingDate"type="date" value="date">
-                          </div>
-                          <div class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="OwnerName">Name of Owner</label>
                             <input class="form-control" name="LostSomethingOwnerName" placeholder="Enter Name" type="text">
-                          </div>
-                          <div class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="OwnerMail">e-Mail of Owner</label>
                             <input class="form-control" name="LostSomethingOwnerMail" placeholder="Enter e-Mail" type="email">
-                          </div>
-                          <div class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="OwnerPhone">Phone Number of Owner</label>
                             <input class="form-control" name="LostSomethingOwnerPhone" placeholder="05xxxxxxxxx" type="tel"  maxlength="11" minlength="11" pattern="(?:050|053|054|055?)\d{1}\d{7}">
-                          </div>
-                          <button type="reset">Reset</button>
-                          <button type="submit" formmethod="POST">Send</button>
-                        </form>
-                      </div>
-                    </div>
+                        </div>
+                        <button type="reset">Reset</button>
+                        <button type="submit" formmethod="POST">Send</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-
 
 	<button class="btn btn-info btn-md"  data-toggle="modal" data-target="#confirm-delete">
 		Delete Record
@@ -97,11 +98,9 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-
 					<form method="post" action="{{ url_for('site.delete_lost_stuff', id=lost.get_id()) }}">
 						<button type="submit" class="btn btn-danger btn-ok">Delete</button>
 					</form>
-
 				</div>
 			</div>
 		</div>
