Restaurants page fixes

--- a/templates/add_faculty_details.html
+++ b/templates/add_faculty_details.html
@@ -5,12 +5,10 @@
 	<br>
     <table style="width: 75%">
 	    <tr>
-            <td style="width: 40%"><b>Faculty Name</b></td>
-            <td>{{ faculty.get_name() }}</td>
+            <td style="width: 40%">Faculty Name: {{ faculty.get_name() }}</td>
         </tr>
 	    <tr>
-            <td style="width: 40%"><b>Current Location: </b></td>
-            <td>{{ faculty.get_code() }}</td>
+            <td style="width: 40%">Faculty Code: {{ faculty.get_code() }}</td>
         </tr>
     </table>
 	<br>
