--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -77,12 +77,11 @@
         <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 20%;" aria-label="Description: activate to sort column ascending">Description</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Possible Location: activate to sort column ascending">Possible Location</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 17%;" aria-label="Possible Date of Losing: activate to sort column ascending">Possible Date of Losing<br>(YYYY-MM-DD)</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 11%;" aria-label="Name of Owner: activate to sort column ascending">Name of Owner</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 16%;" aria-label="Contact Info: activate to sort column ascending">Contact Info</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 20%;" aria-label="Description: activate to sort column ascending">Restaurant ID</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Possible Location: activate to sort column ascending">Food Type</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 17%;" aria-label="Possible Date of Losing: activate to sort column ascending">Restaurant Point</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 11%;" aria-label="Name of Owner: activate to sort column ascending">Opening Time</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 16%;" aria-label="Contact Info: activate to sort column ascending">Closing Time</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
             </tr>
             </thead>
@@ -90,14 +89,16 @@
                 <tr>
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
-                    <td>{{ item[2] }}</td>
-                    <td>{{ item[3] }}</td>
-                    <td>{{ item[4] }}<br>{{ item[5] }}</td>
                     <td>
-                        <a href="{{ url_for('site.SelectedProfilePage', username=item[6]) }}">
-                            <button type="submit"  class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Go to Profile</button>
-                        </a>
+                        {% if item[2] == -1 %}
+                         There is not any votes yet!
+                        {% else %}
+                         {{ item[2] }}
+                        {% endif %}
                     </td>
+                    <td>{{ item[3] }}</td>
+                    <td>{{ item[4] }}</td>
+
                     <td>
                         <a href="{{ url_for('site.SelectedRestaurant', restaurantId=item[8]) }}">
                             <button type="button" class="btn btn-info btn-md">Go to Details</button>
