--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -47,11 +47,11 @@
         <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">LOCATION</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">MIN RENT PRICE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">MAX RENT PRICE</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">Location</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">Min Rent Price</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">Max Rent Price</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="DESCRIPTION: activate to sort column ascending">Description</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">Owner Of Announcement</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
             </tr>
             </thead>
