--- a/templates/sharedmyhouse_announcement.html
+++ b/templates/sharedmyhouse_announcement.html
@@ -54,15 +54,16 @@
                   </div>
                 </div>
     {% if ALLSharingHouse %}
+        <br><br>
         <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
                 <tr role = "row">
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="LOCATION: activate to sort column ascending">LOCATION</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="RENT PRICE: activate to sort column ascending">RENT PRICE</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="NUMBER OF PEOPLE: activate to sort column ascending">NUMBER OF PEOPLE</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="NUMBER OF ROOM: activate to sort column ascending">NUMBER OF ROOM</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
-                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="LOCATION: activate to sort column ascending">Location</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="RENT PRICE: activate to sort column ascending">Rent Price</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="NUMBER OF PEOPLE: activate to sort column ascending">Number Of People</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="NUMBER OF ROOM: activate to sort column ascending">Number Of Room</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="DESCRIPTION: activate to sort column ascending">Description</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">Owner Of Announcement</th>
                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
                 </tr>
             </thead>
