add data to database

--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -19,12 +19,12 @@
                             <input class="form-control" name = "InputLocationOfSearchingHouse" id="InputLocationOfSearchingHouse" placeholder="Enter location" type="text" required>
                         </div>
                         <div class="form-group">
-                            <label for="InputMinRentPriceOfSearchingHouse">Minimum Rent Price</label>
+                            <label for="InputMinRentPriceOfSearchingHouse">Minimum Rent Per Person</label>
                             <input class="form-control"  name = "InputMinRentPriceOfSearchingHouse" id="InputMinRentPriceOfSearchingHouse" placeholder="Enter Minimum Rent Price" type="text"required>
                         </div>
 
                         <div class="form-group">
-                            <label for="InputMaxRentPriceOfSearchingHouse">Maximum Rent Price</label>
+                            <label for="InputMaxRentPriceOfSearchingHouse">Maximum Rent Per Person</label>
                             <input class="form-control"  name = "InputMaxRentPriceOfSearchingHouse" id="InputMaxRentPriceOfSearchingHouse" placeholder="Enter Maximum Rent Price" type="text"required>
                         </div>
                         <div class="form-group">
@@ -48,8 +48,8 @@
             <thead>
             <tr role="row">
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="LOCATION: activate to sort column ascending">Location</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">Min Rent Price</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">Max Rent Price</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MIN RENT PRICE: activate to sort column ascending">Min Rent Per Person</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="MAX RENT PRICE: activate to sort column ascending">Max Rent Per Person</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="DESCRIPTION: activate to sort column ascending">Description</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">Owner Of Announcement</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
