--- a/templates/searchingHouse_details.html
+++ b/templates/searchingHouse_details.html
@@ -41,12 +41,12 @@
                             <input class="form-control" name = "InputLocationOfSearchingHouse" id="InputLocationOfSearchingHouse" placeholder="Enter location" type="text" >
                         </div>
                         <div class="form-group">
-                            <label for="InputMinRentPriceOfSearchingHouse">Minimum Rent Price</label>
+                            <label for="InputMinRentPriceOfSearchingHouse">Minimum Rent Per Person</label>
                             <input class="form-control"  name = "InputMinRentPriceOfSearchingHouse" id="InputMinRentPriceOfSearchingHouse" placeholder="Enter Minimum Rent Price" type="text">
                         </div>
 
                         <div class="form-group">
-                            <label for="InputMaxRentPriceOfSearchingHouse">Maximum Rent Price</label>
+                            <label for="InputMaxRentPriceOfSearchingHouse">Maximum Rent Per Person</label>
                             <input class="form-control"  name = "InputMaxRentPriceOfSearchingHouse" id="InputMaxRentPriceOfSearchingHouse" placeholder="Enter Maximum Rent Price" type="text">
                         </div>
                         <div class="form-group">
