--- a/templates/restaurants_details.html
+++ b/templates/restaurants_details.html
@@ -135,7 +135,7 @@
                                 <div class="form-group">
                                     <div class="form-row">
                                         <div class="col-md-6">
-                                            <label for="exampleInputPassword1">Select campus location</label>
+                                            <label for="exampleInputPassword1">Select point</label>
                                             <select class="form-control" id="point" name="point" >
                                                 {% for point in pointList %}
                                                     <option value="{{ point }}">{{ point }}</option>
